--- a/src/pages/user/HomePage/style.css
+++ b/src/pages/user/HomePage/style.css
@@ -56,7 +56,12 @@
 .wrapper .section .new__list__song .newsong__right{
     width: 10%;
     color: #239292;
-    font-size: 18px;
+    font-size: 20px;
+}
+.wrapper .section .new__list__song .newsong__right .icon__love:hover{
+    background-color: #bff3f3;
+    padding: 10px 10px;
+    border-radius: 50px;
 }
 .wrapper .info__select__song{
     width: 44%;
