--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,84 @@
 @import url('./pages/dashboard/HomeAdmin/style.css');
 @import url('./pages/dashboard/PostSong/style.css');
 @import url('./pages/dashboard/EditSong/style.css');
+
+@media only screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+  .user__icon {
+    opacity: 0;
+  }
+
+  .wrapper .section .play__list .media__left {
+    width: 70%;
+    margin-left: 10px;
+  }
+
+  .wrapper .section .play__list .media__center {
+    width: 20%;
+  }
+
+  .wrapper .section .new__list__song .newsong__left {
+    width: 70%;
+    display: flex;
+    margin-left: 10px;
+  }
+
+  .wrapper .section .new__list__song .newsong__center {
+    width: 20%;
+  }
+
+  .leaderboard {
+    width: 70%;
+    margin-left: 20%;
+    transform: translate(0, 100px);
+    padding-bottom: 100px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  body{
+    overflow-y: hidden;
+  }
+  .bell__icon{
+    opacity: 0;
+    position: absolute;
+  }
+  .user__icon{
+    position: absolute;
+    top: -100px;
+  }
+  .header__layout .user__outline{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+    width: 100%;
+}
+.header__layout .user__outline .list__song__icon{
+  opacity: 1;
+}
+.sidebar {
+  opacity: 0;
+}
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.wrapper .section {
+  opacity: 0;
+  position: absolute;
+}
+.wrapper .info__select__song {
+  width: 125%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.dcd__icon{
+  font-size: 200px;
+}
+}
