--- a/src/layouts/SideBarLayout/SidebarHeader/style.css
+++ b/src/layouts/SideBarLayout/SidebarHeader/style.css
@@ -13,6 +13,10 @@ header{
     height: 70px;
     margin-right: 100px;
 }
+.header__layout .user__outline .list__song__icon{
+    opacity: 0;
+    font-size: 40px;
+}
 .header__layout .user__outline .search__icon{
     font-size: 24px;
 }
