--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,8 @@
 
   .sidebar {
     opacity: 0;
+    position: absolute;
+    left: -200px;
   }
 
   .wrapper {
@@ -80,12 +82,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
   }
 
   .wrapper .section {
     opacity: 0;
     position: absolute;
+    left: -500px;
   }
 
   .wrapper .info__select__song {
@@ -97,12 +101,24 @@
   }
 }
 
+@media only screen and (max-width: 415px) {
+
+  .wrapper .info__select__song {
+    width: 137%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 @media only screen and (max-width: 376px) {
-  .wrapper{
+  .wrapper {
     width: 50%;
   }
+
   .wrapper .info__select__song {
-    width: 133%;
+    width: 137%;
     display: flex;
     flex-direction: column;
     justify-content: center;
